<resources>
    <string name="app_name">Android Rescuer</string>
    <string name="title_home">Home</string>
    <string name="key_enable_block_status_bar" translatable="false">key_enable_block_status_bar</string>
    <string name="key_enable_on_boot" translatable="false">key_enable_on_boot</string>
    <string name="pref_key_enable_lockscreen_protector" translatable="false">key_enable_lockscreen_protector</string>
    <string name="pref_key_rate_app" translatable="false">rate_app</string>
    <string name="pref_key_settings_delay" translatable="false">delay_key</string>
    <string name="receiver_global" translatable="false">globalactions</string>
    <string name="receiver_reason" translatable="false">reason</string>
    <string name="google_api_key_console" translatable="false">AIzaSyBoZMrIud11G8ZgkIRcWXdRP837YH52vpI</string>
    <string name="def">Default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reqMD">Request mobile data</string>
    <string name="reqL">Request location</string>
    <string name="reqDW">Request data wipe YesNoSpinner</string>
    <string name="reqLT">Request real time location tracking</string>
    <string name="reqMC">Request send device\'s encrypted contacts with emailYesNoSpinner</string>
    <string name="show_header">Show header</string>
    <string name="hide_header">Hide header</string>
    <string name="map">Map</string>
    <string name="control_panel">Control Panel</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="letsetapp">Let\'s setup the app!</string>
    <string name="ld">Locate device</string>
    <string name="slide_alt">Options marked as remotely activatable with sms, using internet or the app itself.</string>
    <string name="locate_slide_desc1">⚪Activate real time location tracking (remotely).</string>
    <string name="locate_slide_desc2">⚪Or save battery by sending device location on wrong lock password  (remotely activatable).</string>
    <string name="locate_slide_desc3">⚪Or maybe you have an expensive phone with good battery and can afford always running location updates on specific hours.</string>
    <string name="backup_slide_desc1">⚪Backup contacts to google drive remotely.</string>
    <string name="backup_slide_desc2">⚪Archive \'Android Rescuer\' folder on device internal storage and back it up in google drive remotely.</string>
    <string name="delete_slide_desc1">⚪Factory data reset device (remotely).</string>
    <string name="delete_slide_desc2">⚪Delete Internal Storage (remotely).</string>
    <string name="delete_slide_desc3">⚪Factory reset the device or just create log file containing device\'s location and unlock attempts / picture of intruder (on wrong lock password) when sim card is removed.</string>
    <string name="protect_slide_desc1">⚪Disable lockscreen power menu(can\'t turn the device off without unlocking it).</string>
    <string name="protect_slide_desc2">⚪Disable Airplane Mode in lockscreen(root or xposed required).</string>
    <string name="protect_slide_desc3">⚪When internet connection is lost the app can be configured to create log file containing device\'s location and unlock attempts / picture of intruder (on wrong lock password) / backup contacts and scan for open wifi networks, try to connect to one and upload the data to google drive.</string>
    <string name="nlp">Needed location permissions.</string>
    <string name="why_dev_admin">The app needs to be administrator to observe the lockscreen, set pin and factory data reset.</string>
    <string name="gr_a_auth">Grant and Authorize</string>
    <string name="need_of_perm_dev_admin">You need to grant at least location permission and make the app dev admin!</string>
    <string name="loca_req">Location(required)</string>
    <string name="its_used_for">It\'s used for</string>
    <string name="loc_descr">locating the device when lost or stolen.</string>
    <string name="why">Why?</string>
    <string name="perm_granted">All Permissions granted!</string>
    <string name="enable_in_settings">You will need to enable it manually in Settings!</string>
    <string name="ena_in_sett_short">Enable in Settings</string>
    <string name="re_grant_all">Re-grant permissions</string>
    <string name="not_all_perm">Not all permissions are granted</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_sms_desc">auto sending sms with instructions to the app on another phone.</string>
    <string name="ext_storage">External Storage</string>
    <string name="ext_storage_desc">saving log to device\'s storage.</string>
    <string name="read_cont">Read Contacts</string>
    <string name="read_cont_desc">backing up contacts and autocompleting contacts text field.</string>
    <string name="read_phone_state">Read Phone State</string>
    <string name="read_phone_state_desc">auto detecting phone number and combined with root access - auto mobile data enabling.</string>
    <string name="camera">Camera</string>
    <string name="camera_desc">taking picture on wrong password/pin enter.</string>
    <string name="why_req">Why permissions are required:</string>
    <string name="app_is_admin">Android Rescuer is device admin.</string>
    <string name="evr_ready">Everything is ready!</string>
    <string name="backup_data">Backup data</string>
    <string name="you_need_to_grant_some_permissions_to_make_the_app_work">You need to grant some permissions to make the app work.</string>
    <string name="make_administrator">Make Administrator</string>
    <string name="check_root">Check Root</string>
    <string name="root_comp_desc">You need to give the app root access or give it admin rights with desktop app otherwise it won\'t be able to toggle gps and mobile data on newer deivices.</string>
    <string name="check_root_computer_more">Check Root access or Computer.</string>
    <string name="cont">Continue?</string>
    <string name="xposed_not_active">XPOSED doesn\'t seem to be active. Open modules tab anyway?</string>
    <string name="attention">Attention</string>
    <string name="xposed_not_installed">Xposed doesn\'t seem to be installed. If installed enable \'Android Rescuer\' manually from Xposed Modules tab.</string>
    <string name="no_root">You don\'t have root!</string>
    <string name="root_waw">You have root!</string>
    <string name="root_waw_desc">App will work at full capacity.</string>
    <string name="no_root_desc">There is a small chance that remote gps and location enabling will work without root. If there is a computer nearby better follow the instructions.</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="fields_explanation">Fields explanation</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="already_registred_nlogin">Already registred?\nLogin</string>
    <string name="no_account_register">No account?\nRegister</string>
    <string name="login">Login</string>
    <string name="reg_success">Registered successfully!</string>
    <string name="error">Error acquired!</string>
    <string name="reg_log">Register or Login!</string>
    <string name="incorrect_phone">Incorrect phone number!</string>
    <string name="short_pass">The password must be at least 8 characters long.</string>
    <string name="incorrect_mail">Incorrect email address!</string>
    <string name="loading">Loading…</string>
    <string name="verification_code">Verification Code</string>
    <string name="retype_the_new_password">Retype the new password</string>
    <string name="write_new_password">Write new password</string>
    <string name="no_match_pass">Passwords doesn\'t match!</string>
    <string name="lenght_not_4">Verification code length not 4!</string>
    <string name="no_net_error">Error acquired! Maybe you don\'t have internet access.</string>
    <string name="sent_verify">Verification Code sent successfully!</string>
    <string name="welcome">Welcome</string>
    <string name="backup_contacts">Backup device contacts to Google Drive</string>
    <string name="backup_folder">Backup \'Rescuer\' folder on device\'s internal storage to Google Drive</string>
    <string name="delete_internal_storage">Delete internal storage</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="english">English</string>
    <string name="exit">Exit</string>
    <string name="factory_reset">Factory data reset the device</string>
    <string name="german">German</string>
    <string name="location_on_wrong_pass">Send device\'s location on wrong lock password enter</string>
    <string name="message">Control Message</string>
    <string name="messageTitle">Send control message</string>
    <string name="realtimelocation">Real time location tracking</string>
    <string name="location">Location(GPS)</string>
    <string name="mobileData">Mobile Data</string>
    <string name="grant_permissions">Grant\ngeneral\npermissions</string>
    <string name="grant_n_draw_over_nother_apps">Grant\n draw over\nother apps</string>
    <string name="draw_over_perm">Draw Over Other Apps Permissions granted!</string>
    <string name="draw_over_desc">Draw over other apps permission needs to be granted otherwise the app won\'t be able to use camera in background. Camera use in background is required to take photo on wrong lock password enter.</string>
    <string name="why_is_perm_req">Why is this permission required?</string>
    <string name="perm_set_finished">Permission settings finished!</string>
    <string name="auto_refresh">Refresh every 10 secs</string>
    <string name="via_sms">-via sms.</string>
    <string name="via_net">-via internet.</string>
    <string name="cancel">Cancel</string>
    <string name="success_message">Message sent successfully!</string>
    <string name="sms_sent">SMS sent successfully!</string>
    <string name="message_delivery_error">SMS can\'t be delivered!</string>
    <string name="sms_delivered">SMS delivered successfully!</string>
    <string name="rlt">Realtime location tracking</string>
    <string name="loc_on_wong_pass">Send location on wrong lock password</string>
    <string name="always_on_location_updates">Always on location updates</string>
    <string name="take_actions">Take actions</string>
    <string name="power_lock">Disable powermenu on lockscreen</string>
    <string name="when_sim_card_is_removed">When SIM card is removed</string>
    <string name="airplane_mode_on_lockscreen">Disable airplane mode on lockscreen</string>
    <string name="photo_on_wp">Take photo on wrong lock password</string>
    <string name="logging_to_file">Logging to file</string>
    <string name="open_wifis_send_data">Scan for open WiFis when internet connection is lost to send collected data.</string>
    <string name="prot_device">Protect device</string>
    <string name="del_data">Delete data</string>
    <string name="get_privacy_and_security_tips">Get privacy and security tips</string>
    <string name="read_more">[Read more]</string>
    <string name="more_info">More info</string>
    <string name="wifi_data">Connect to open WiFis on connection loss</string>
    <string name="pic_on_wrong_pass">Take picture on wrong lock password enter</string>
    <string name="instruction_how_to_activate_with_computer">Instruction how to activate with computer</string>
    <string name="statusbar_lock">Disable statusbar expandability on lockscreen</string>
    <string name="comp_activation">Enable GPS and Mobile data activation with the help of a computer</string>
</resources>