<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slide_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@android:color/transparent"
    android:clipToPadding="false"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="116dp"
    tools:background="@color/settings_slide">

    <ImageView
        android:id="@+id/permisson_img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:gravity="center"
        app:layout_parallaxFactor="0.6" />

    <TextView
        android:id="@+id/first_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/gr_a_auth"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_parallaxFactor="0.5" />

    <TextView
        android:id="@+id/perm_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/you_need_to_grant_some_permissions_to_make_the_app_work"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_parallaxFactor="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_parallaxFactor="0.3">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/grant_perm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/grant_permissions"
            android:textColor="@color/settings_slide" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/grant_draw_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/grant_n_draw_over_nother_apps"
            android:textColor="@color/settings_slide" />
    </LinearLayout>

    <TextView
        android:id="@+id/dev_admin_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/why_dev_admin"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_parallaxFactor="0.2" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/grant_dev_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_administrator"
        app:layout_parallaxFactor="0.2"
        android:layout_marginBottom="8dp"
        android:textColor="@color/settings_slide" />

    <TextView
        android:id="@+id/google_acc_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="To save backup on Google Drive, you will need to choose Google Account."
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_parallaxFactor="0.2" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/grant_google_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Enable backup to Google Drive"
        android:textColor="@color/settings_slide"
        app:layout_parallaxFactor="0.2" />


</agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>